correction og misalignment of the main-nav when it hits the second section

--- a/sass/components/_site-header.scss
+++ b/sass/components/_site-header.scss
@@ -2,9 +2,6 @@
 @use "../layout" as *;
 
 .site-header {
-  background-image: url(../public/spa-imgs/spa/masking-2-lazy-2.jpg);
-  background-position: bottom center;
-  background-size: cover;
 }
 
 .nav {
